# gemini-chat

./: .env.example  .gitignore  README.md  app.vue  nuxt.config.ts  package.json  tailwind.config.js
.github/workflows/: release.yml
assets/css/: main.css
components/: ChatMessage.vue  ChatSidebar.vue  ExportMenu.vue  FileAttachment.vue  KeyboardShortcutsHelp.vue  SettingsModal.vue  TokenDashboard.vue
composables/: useChat.ts  useExport.ts  useKeyboardShortcuts.ts
pages/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
